# OpenGLEngine

./: CMakeLists.txt  README.md
dependencies/glad/: glad.h
src/: config.h  glad.c  main.cpp
